Movies Home Screen finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="lbl_cinema_bottom_icon">Cinema</string>
     <string name="lbl_ticket_bottom_icon">Ticket</string>
     <string name="lbl_profile_bottom_icon">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
