--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="lbl_genres">Genres</string>
     <string name="lbl_month">Month</string>
     <string name="lbl_search_the_movies">Search the movies</string>
+    <string name="cities_lbl">Cities</string>
 </resources>
